--- a/Dockerfile_Base
+++ b/Dockerfile_Base
@@ -2,7 +2,7 @@ FROM python:3.6.8-alpine
 
 COPY requestments.txt requestments.txt
 
-RUN apl update && apk add tzdata openssl-dev libffi-dev make gcc g++&& \
+RUN apk update && apk add tzdata openssl-dev libffi-dev make gcc g++&& \
     ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo "Asia/Shanghai" > /etc/timezone && \
     pip install -r requestments.txt -i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com && \
