--- a/Dockerfile_Base
+++ b/Dockerfile_Base
@@ -5,6 +5,6 @@ COPY requestments.txt requestments.txt
 RUN apk update && apk add tzdata openssl-dev libffi-dev make gcc g++ nginx && \
     ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo "Asia/Shanghai" > /etc/timezone && \
-    pip install -r requestments.txt
+    pip install -r requestments.txt && \
     mkdir /run/nginx && \
     touch /run/nginx/nginx.pid
